titulo de la coleccion

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!-- https://vuejs.org/v2/guide/index.html -->
         <div id="app">
             <div class="jumbotron">
-                <h1 id="title"></h1>
+                    <h1 class="display-4" id="title">{{ col.collection.title }}</h1>
             </div>
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
