--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div class="jumbotron">
                     <h1 class="display-4" id="title">{{ col.collection.title }}</h1>
             </div>
+            <div class="card" v-for="item in col.collection.items">
+            </div>
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
                - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
