--- a/index.html
+++ b/index.html
@@ -20,39 +20,22 @@
                     <h1 class="display-4" id="title">{{ col.collection.title }}</h1>
             </div>
             <div class="container">
-                    <div class="card-group">
-                            <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                              </div>
-                            </div>
-                            <div class="card">
-                              <img class="card-img-top" src="..." alt="Card image cap">
-                              <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                              </div>
-                            </div>
-                          </div>
+                <div class="card-group">
                     <div class="card" v-for="item in col.collection.items">
-                            <div class="card-body">
-                                <a v-bind:href="item.href" class="btn btn-primary">Ver</a>
-                            </div>
-                    </div>
-            </div>
-          
+                        <div class="card-body" v-for="movie in item.data">
+                             <dl>
+                               <dt class="card-title">
+                                    {{ movie.prompt }}
+                                </dt>
+                                <dd>
+                                    {{movie.value}}
+                                </dd>
+                            </dl>
+                        </div>
+                        <a v-bind:href="item.href" class="btn btn-primary">Ver</a>
+                    </div> 
+                </div>
+            </div>  
             <!--
                  TODO: Mostrar datos del objeto collection. Ver archivo ./js/script.js
                - Cargar la librería de VueJS y el script ./js/script.js al final de la etiqueta <body>
@@ -66,7 +49,7 @@
                    - La definición <dd> será la propiedad "value"
             -->
 
-        </div>
+        
 
     </body>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
